--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 logging.level.com.in28minutes.springboot.myFirstWebApp=debug
 spring.mvc.format.date=yyyy-MM-dd
+spring.datasource.url=jdbc:h2:mem:testdb
